@@ -3,6 +3,7 @@ Revision history for Perl extension Alien::wxWidgets.
 0.32
 	- Correctly handle flags for wxWidgets Universal Mac builds.
 	- Allow building a monolithic wxWidgets.
+	- Allow building Mac Universal binaries for wxWidgets.
 	- Updated bundled Archive::Extract to the latest version.
 
 0.31  Sat Mar 24 17:25:25 CET 2007
